--- a/Quantumult/Outbound.conf
+++ b/Quantumult/Outbound.conf
@@ -158,10 +158,14 @@ server=/falogin.cn/system
 ;available=policy-name-6, resource-tag-regex=^sample, server-tag-regex=^example
 ;round-robin=policy-name-7, resource-tag-regex=^sample, server-tag-regex=^example
 
-url-latency-benchmark=香港, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城|仅限)).)*$, check-interval=600, tolerance=80, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+url-latency-benchmark=香港, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台|日|新|美|韩|仅限)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+url-latency-benchmark=台湾, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美|仅限)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+url-latency-benchmark=日本, server-tag-regex=(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|仅限)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+url-latency-benchmark=新加坡, server-tag-regex=(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美|仅限)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+url-latency-benchmark=美国, server-tag-regex=(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新|仅限)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 static=Final, proxy, direct, 香港, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
-static=Streaming, proxy, 香港, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Streaming.png
-static=StreamingSE, direct, proxy, 香港, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/StreamingSE.png
+static=Streaming, proxy, Final, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Streaming.png
+static=StreamingSE, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/StreamingSE.png
 
 [server_remote]
 #
@@ -218,6 +222,9 @@ https://raw.githubusercontent.com/lkj2619/DivineEngineProfiles/main/Surge/Rulese
 
 # China 中国直连
 https://raw.githubusercontent.com/lkj2619/DivineEngineProfiles/main/Surge/Ruleset/China.list, tag=🇨🇳China, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
+
+# chatGPT
+https://raw.githubusercontent.com/lkj2619/QuantumultXProfiles/main/Filter/chatGPT.list, tag=🤖chatGPT, force-policy=美国, update-interval=172800, opt-parser=true, enabled=true
 
 [rewrite_remote]
 #
