--- a/Quantumult/Outbound.conf
+++ b/Quantumult/Outbound.conf
@@ -252,6 +252,8 @@ https://raw.githubusercontent.com/lkj2619/DivineEngineProfiles/main/Quantumult/R
 # 漏网之鱼
 https://raw.githubusercontent.com/lkj2619/QuantumultXProfiles/main/Rewrite/adblock.conf, tag=🛡MyAdBlock, update-interval=172800, enabled=true
 
+# 手动签到保存cookie
+https://raw.githubusercontent.com/lkj2619/QuantumultXProfiles/main/Rewrite/sign.conf, tag=🍪Cookie, update-interval=172800, enabled=true
 
 [server_local]
 #
@@ -294,6 +296,7 @@ final, Final
 
 # [task_local] 完整示例请查看「示例」
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/streaming-ui-check.js, tag=📺流媒体服务查询, img-url=checkmark.seal.system, enabled=true
+0 9 * * * https://raw.githubusercontent.com/lkj2619/QuantumultXProfiles/main/Rewrite/js/maoxiong-sign.js, tag=猫熊机场自动签到, img-url=https://mxwljsq.top/favicon.ico, enabled=true
 
 [http_backend]
 #
