--- a/Quantumult/Outbound.conf
+++ b/Quantumult/Outbound.conf
@@ -296,7 +296,7 @@ final, Final
 
 # [task_local] 完整示例请查看「示例」
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/streaming-ui-check.js, tag=📺流媒体服务查询, img-url=checkmark.seal.system, enabled=true
-0 9 * * * https://raw.githubusercontent.com/lkj2619/QuantumultXProfiles/main/Rewrite/js/maoxiong-sign.js, tag=猫熊机场自动签到, img-url=https://mxwljsq.top/favicon.ico, enabled=true
+0 9 * * * https://raw.githubusercontent.com/lkj2619/QuantumultXProfiles/main/Rewrite/js/maoxiong-sign.js, tag=猫熊机场自动签到, img-url=clock.badge.checkmark.system, enabled=true
 
 [http_backend]
 #
