--- a/Quantumult/Outbound.conf
+++ b/Quantumult/Outbound.conf
@@ -255,6 +255,9 @@ https://raw.githubusercontent.com/lkj2619/QuantumultXProfiles/main/Rewrite/adblo
 # 手动签到保存cookie
 https://raw.githubusercontent.com/lkj2619/QuantumultXProfiles/main/Rewrite/sign.conf, tag=🍪Cookie, update-interval=172800, enabled=true
 
+# 破解会员
+https://raw.githubusercontent.com/lkj2619/QuantumultXProfiles/main/Rewrite/cracker.conf, tag=👑Cracker, update-interval=172800, enabled=true
+
 [server_local]
 #
 # 只有 obfs=http, obfs=ws, obfs=ws, obfs=wss 可以有可选的「obfs-uri」字段。
