--- a/Quantumult/Outbound.conf
+++ b/Quantumult/Outbound.conf
@@ -69,7 +69,7 @@ no-ipv6
 # > OneDNS
 ;server=117.50.10.10
 # > DNSPod Public DNS
-server=119.29.29.29
+;server=119.29.29.29
 # > Alibaba Public DNS
 ;server=223.5.5.5
 
@@ -166,9 +166,9 @@ url-latency-benchmark=美国, server-tag-regex=(?=.*(美|US|(?i)States|American)
 
 static=Emby, server-tag-regex=.*emby.*, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Emby.png
 
-static=Final, proxy, direct, 香港, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
-static=Streaming, proxy, Final, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Streaming.png
-static=StreamingSE, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/StreamingSE.png
+static=Final, proxy, direct, 香港, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+static=Streaming, proxy, Final, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
+static=StreamingSE, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
 
 [server_remote]
 #
