--- a/Quantumult/Outbound.conf
+++ b/Quantumult/Outbound.conf
@@ -59,7 +59,7 @@ udp_whitelist=1-442, 444-65535
 
 # 禁用系统 DNS
 # 为了提高性能，会使用从当前网络(系统)中获取的 DNS 服务器(您可以使用「no-system」禁用此功能，但至少要增加一个自定义的 DNS 服务器。
-;no-system
+no-system
 
 # 禁用 IPv6
 # 当设置「no-ipv6」时，Quanumult X Tunnel 的 DNS 模块会直接让 AAAA 查询失败。
@@ -84,7 +84,7 @@ no-ipv6
 # 不建议在与防火墙相关的网络环境中使用，不确定 DoH 服务器是否总能被到达。
 # 如果 DoH 服务器在您的国家或地区不是流行的 DNS 服务器，则不推荐使用，它可能会丢失 ISP DNS 服务器返回的 CDN 优化结果。
 # 如果 DoH 服务器是一个反广告相关的服务器，则不推荐使用（Quantumult X 过滤模块对于被拒绝的域具有更好的性能，它可以避免客户端无休止的请求）。
-;doh-server=https://dns.alidns.com/dns-query
+doh-server=https://dns.alidns.com/dns-query
 ;doh-server=https://223.6.6.6/dns-query
 
 # 本地 DNS 映射
