--- a/Quantumult/Outbound.conf
+++ b/Quantumult/Outbound.conf
@@ -71,7 +71,8 @@ no-ipv6
 # > DNSPod Public DNS
 ;server=119.29.29.29
 # > Alibaba Public DNS
-;server=223.5.5.5
+server=223.5.5.5
+server=223.6.6.6
 
 # 在特定的网络环境下忽略自定义 DNS 可在后方加上「excluded_ssids」相关字段。
 # 注意：如配置了 no-system，则请务必确保在忽略了部分自定义 DNS 的配置下至少有一个可用的自定义 DNS 配置。
@@ -84,7 +85,7 @@ no-ipv6
 # 不建议在与防火墙相关的网络环境中使用，不确定 DoH 服务器是否总能被到达。
 # 如果 DoH 服务器在您的国家或地区不是流行的 DNS 服务器，则不推荐使用，它可能会丢失 ISP DNS 服务器返回的 CDN 优化结果。
 # 如果 DoH 服务器是一个反广告相关的服务器，则不推荐使用（Quantumult X 过滤模块对于被拒绝的域具有更好的性能，它可以避免客户端无休止的请求）。
-doh-server=https://dns.alidns.com/dns-query
+;doh-server=https://dns.alidns.com/dns-query
 ;doh-server=https://223.6.6.6/dns-query
 
 # 本地 DNS 映射
