使用运营商DNS服务器

--- a/Quantumult/Outbound.conf
+++ b/Quantumult/Outbound.conf
@@ -59,7 +59,7 @@ udp_whitelist=1-442, 444-65535
 
 # 禁用系统 DNS
 # 为了提高性能，会使用从当前网络(系统)中获取的 DNS 服务器(您可以使用「no-system」禁用此功能，但至少要增加一个自定义的 DNS 服务器。
-no-system
+;no-system
 
 # 禁用 IPv6
 # 当设置「no-ipv6」时，Quanumult X Tunnel 的 DNS 模块会直接让 AAAA 查询失败。
@@ -71,8 +71,8 @@ no-ipv6
 # > DNSPod Public DNS
 ;server=119.29.29.29
 # > Alibaba Public DNS
-server=223.5.5.5
-server=223.6.6.6
+;server=223.5.5.5
+;server=223.6.6.6
 
 # 在特定的网络环境下忽略自定义 DNS 可在后方加上「excluded_ssids」相关字段。
 # 注意：如配置了 no-system，则请务必确保在忽略了部分自定义 DNS 的配置下至少有一个可用的自定义 DNS 配置。
